# pi-go-terminal-bench

./: pyproject.toml  run.sh
src/pi_terminal_bench/: install-pi.sh.j2  pi_agent.py
