[project]
name = "pi-terminal-bench"
version = "0.1.0"
description = "Harbor agent adapter for pi coding agent to run Terminal-Bench evaluations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "harbor>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_terminal_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
